kubernetes/projects/applications/apps/registry-artifacts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-artifacts
  namespace: registry-artifacts
  labels:
    app.kubernetes.io/name: registry-artifacts
    app.kubernetes.io/part-of: harbor
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: registry-artifacts
  template:
    metadata:
      labels:
        app.kubernetes.io/name: registry-artifacts
        app.kubernetes.io/part-of: harbor
        registry-artifacts-psql-client: "true"
    spec:
      serviceAccountName: registry-artifacts
      automountServiceAccountToken: true
      imagePullSecrets:
        - name: harbor-registry
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: app
          image: registry.home/registry-artifacts/registry-artifacts:0.1.50 # {"$imagescan": "registry-artifacts"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 4
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 4
          resources:
            requests:
              cpu: 20m
              memory: 128Mi
            limits:
              memory: 192Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
