kubernetes/projects/applications/apps/registry-artifacts/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registry-artifacts
  namespace: registry-artifacts
  labels:
    app.kubernetes.io/name: registry-artifacts
    app.kubernetes.io/part-of: harbor
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: registry-artifacts
  ports:
    - name: http
      port: 8080
      targetPort: http
