kubernetes/projects/applications/apps/registry-artifacts/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-artifacts
  namespace: registry-artifacts
  labels:
    app.kubernetes.io/name: registry-artifacts
    app.kubernetes.io/part-of: harbor
spec:
  ingressClassName: traefik
  rules:
    - host: registry-artifacts.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-artifacts
                port:
                  name: http
